--- a/keycloakECommerce/src/app/app.component.html
+++ b/keycloakECommerce/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Key Cloak Angular : <span>e-Commerce</span></a>
+    <a class="navbar-brand" href="#">e-Commerce : <span>Angular</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,33 +23,36 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/produits">Nos produits</a>
+          <a class="nav-link" href="/produits">Produits</a>
         </li>
         
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isAppManager()">
           <a class="nav-link" href="/fournisseurs">Fournisseurs</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
 
-        <li class="nav-item dropdown " sec:authorize="isAuthenticated()">
+        <li class="nav-item dropdown " *ngIf="securityService.kc.authenticated">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            <span sec:authentication="name"></span>
+            aria-haspopup="true" aria-expanded="false">  
+            <span >
+              {{securityService.kc.tokenParsed.name}}
+            </span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/logout">Se deconnecter</a>
-            <a class="dropdown-item" href="/changePsswd">Changer le mdp</a>
+            <a class="clickable dropdown-item" (click)="onLogOut()">Se deconnecter</a>
+            <a class="clickable dropdown-item" (click)="onChangePwd()">Changer le mdp</a>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item" sec:authorize="isAnonymous()">
-          <a href="/sso/login" class="nav-link btn btn-secondary ">Se Connecter</a>
+        <li class="nav-item" *ngIf="!securityService.kc.authenticated">
+          <a class="clickable dropdown-item" (click)="onLogIn()">Se Connecter</a>
         </li>
       </ul>
     </div>
   </nav>
   <router-outlet></router-outlet>
+  
 
 </body>
 
